Solve W3C validator error, see https://stackoverflow.com/a/69697367/1243247

--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -4,7 +4,10 @@
   font-style: normal;
   font-weight: 400;
   src: local('Nunito Regular'), local('Nunito-Regular'), url("fonts/XRXV3I6Li01BKofIOuaBXso.woff2") format('woff2');
-  unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
+  unicode-range: U+0102-0103;
+  unicode-range: U+0110-0111;
+  unicode-range: U+1EA0-1EF9;
+  unicode-range: U+20AB;
   font-display: fallback;
 }
 /* latin-ext */
@@ -13,7 +16,15 @@
   font-style: normal;
   font-weight: 400;
   src: local('Nunito Regular'), local('Nunito-Regular'), url("fonts/XRXV3I6Li01BKofIO-aBXso.woff2") format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  unicode-range: U+0100-024F; 
+  unicode-range: U+0259; 
+  unicode-range: U+1E00-1EFF; 
+  unicode-range: U+2020;
+  unicode-range: U+20A0-20AB; 
+  unicode-range: U+20AD-20CF; 
+  unicode-range: U+2113;
+  unicode-range: U+2C60-2C7F; 
+  unicode-range: U+A720-A7FF;
   font-display: fallback;
 }
 /* latin */
@@ -22,7 +33,23 @@
   font-style: normal;
   font-weight: 400;
   src: local('Nunito Regular'), local('Nunito-Regular'), url("fonts/XRXV3I6Li01BKofINeaB.woff2") format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  unicode-range: U+0000-00FF;
+  unicode-range: U+0131;
+  unicode-range: U+0152-0153;
+  unicode-range: U+02BB-02BC;
+  unicode-range: U+02C6;
+  unicode-range: U+02DA;
+  unicode-range: U+02DC;
+  unicode-range: U+2000-206F;
+  unicode-range: U+2074;
+  unicode-range: U+20AC;
+  unicode-range: U+2122;
+  unicode-range: U+2191;
+  unicode-range: U+2193;
+  unicode-range: U+2212;
+  unicode-range: U+2215;
+  unicode-range: U+FEFF;
+  unicode-range: U+FFFD;
   font-display: fallback;
 }
 /* vietnamese */
@@ -31,7 +58,10 @@
   font-style: normal;
   font-weight: 700;
   src: local('Nunito Bold'), local('Nunito-Bold'), url("fonts/XRXW3I6Li01BKofAjsOUbuvISTs.woff2") format('woff2');
-  unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
+  unicode-range: U+0102-0103;
+  unicode-range: U+0110-0111;
+  unicode-range: U+1EA0-1EF9;
+  unicode-range: U+20AB;
   font-display: fallback;
 }
 /* latin-ext */
@@ -40,7 +70,15 @@
   font-style: normal;
   font-weight: 700;
   src: local('Nunito Bold'), local('Nunito-Bold'), url("fonts/XRXW3I6Li01BKofAjsOUb-vISTs.woff2") format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  unicode-range: U+0100-024F;
+  unicode-range: U+0259;
+  unicode-range: U+1E00-1EFF;
+  unicode-range: U+2020;
+  unicode-range: U+20A0-20AB;
+  unicode-range: U+20AD-20CF;
+  unicode-range: U+2113;
+  unicode-range: U+2C60-2C7F;
+  unicode-range: U+A720-A7FF;
   font-display: fallback;
 }
 /* latin */
@@ -49,6 +87,22 @@
   font-style: normal;
   font-weight: 700;
   src: local('Nunito Bold'), local('Nunito-Bold'), url("fonts/XRXW3I6Li01BKofAjsOUYevI.woff2") format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  unicode-range: U+0000-00FF;
+  unicode-range: U+0131;
+  unicode-range: U+0152-0153;
+  unicode-range: U+02BB-02BC;
+  unicode-range: U+02C6;
+  unicode-range: U+02DA;
+  unicode-range: U+02DC;
+  unicode-range: U+2000-206F;
+  unicode-range: U+2074;
+  unicode-range: U+20AC;
+  unicode-range: U+2122;
+  unicode-range: U+2191;
+  unicode-range: U+2193;
+  unicode-range: U+2212;
+  unicode-range: U+2215;
+  unicode-range: U+FEFF;
+  unicode-range: U+FFFD;
   font-display: fallback;
 }
